--- a/02audio_video_map.html
+++ b/02audio_video_map.html
@@ -16,6 +16,10 @@
 
 <embed src="C:\Users\Admin\Downloads\Kesariya Tera Ishq Hai Piya Song - Arijit Singh Song - Ranbir & Alia Batt - Full Lyrical Video Song.mp4" type=""></embed>
 
+<embed src="https://www.youtube.com/embed/Pq17Y0tu4Pw"></embed>
+
+
+
       <video controls> <source height="50px" width="50px"    src="C:\Users\Admin\Downloads\Kesariya Tera Ishq Hai Piya Song - Arijit Singh Song - Ranbir & Alia Batt - Full Lyrical Video Song.mp4" type=""></video>
 
       	<embed  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3671.7065068810534!2d72.53503241428263!3d23.034546021662237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e8492cd14e199%3A0x6328d8b3af99aeed!2sL.D.Arts%20College!5e0!3m2!1sen!2sin!4v1663660051907!5m2!1sen!2sin" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></embed>
