--- a/01html5_tags.html
+++ b/01html5_tags.html
@@ -4,6 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>01 html5 tags</title>
+      <!-- <style type="text/css">
+            h1,p,ul,li,div,header,section,aside,nav,article,footer{
+                  background: pink;
+            }
+      </style> -->
 </head>
 <body>
       <h1> h1 </h1>
